hphp/hack/test/typecheck/require_implements_generic.php
<?hh // strict

interface Foo {}

trait MyTrait<T as Foo> {
  require implements T;
}
